--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,38 @@
   </head>
   <body id="main">
     <script>
+      var gui = require('nw.gui');
+      var win = gui.Window.get();
+
+      var menubar = new gui.Menu({ type: 'menubar' });
+
+      var file = new gui.Menu();
+      file.append(new gui.MenuItem({
+        label: 'Open Dive Manager Folder',
+        click: function () {
+          alert('Open Folder!');
+        }
+      }));
+
+      file.append(new gui.MenuItem({
+        label: 'Backup Dive Manager Database',
+        click: function () {
+          alert('Backup!');
+        }
+      }));
+
+      var help = new gui.Menu();
+      help.append(new gui.MenuItem({
+        label: 'About Dive Manager Edit',
+        click: function () {
+          alert('About!');
+        }
+      }));
+      console.log(win.menu);
+      menubar.append(new gui.MenuItem({label: 'File', submenu: file}));
+      menubar.append(new gui.MenuItem({label: 'Help', submenu: help}));
+      win.menu = menubar;
+
       require('node-jsx').install({extension: '.js'});
       var app = require('./scripts/app.js');
     </script>
