--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,23 @@
   </head>
   <body>
     <div id="main"></div>
+    <input type="file" id="backupFile" nwsaveas="Dive-Manager-Backup.db" />
     <script>
       var dbpath = require('./scripts/services/dbpath'),
+          fs     = require('fs'),
           gui    = require('nw.gui'),
           win    = gui.Window.get();
 
       var pathResult = dbpath.getPath();
       var menubar = new gui.Menu({ type: 'menubar' });
+
+      var fileInput = document.querySelector('#backupFile')
+      fileInput.addEventListener('change', backup);
+
+      function backup() {
+        fs.createReadStream(pathResult.path).pipe(fs.createWriteStream(fileInput.value));
+        alert('Database backed up to ' + fileInput.value);
+      }
 
       var file = new gui.Menu();
       file.append(new gui.MenuItem({
@@ -33,7 +43,11 @@
       file.append(new gui.MenuItem({
         label: 'Backup Dive Manager Database',
         click: function () {
-          alert('Backup!');
+          if (pathResult.exists) {
+            fileInput.click();
+          } else {
+            alert('Suunto Dive Manager not found on computer');
+          }
         }
       }));
 
