--- a/src/electronapp/index.html
+++ b/src/electronapp/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World!</title>
+    <title>Suunto DM Editor</title>
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="node_modules/SuuntoDMEditorShared/styles/app.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using io.js <script>document.write(process.version)</script>
-    and Electron <script>document.write(process.versions['electron'])</script>.
+    <div id="main"></div>
+    <script>
+      require('node-jsx').install({extension: '.js'});
+      var app = require('./app.js');
+    </script>
   </body>
 </html>
