Moved app to shared.

--- a/src/electronapp/index.html
+++ b/src/electronapp/index.html
@@ -9,7 +9,7 @@
     <div id="main"></div>
     <script>
       require('node-jsx').install({extension: '.js'});
-      var app = require('./app.js');
+      var app = require('SuuntoDMEditorShared/app');
     </script>
   </body>
 </html>
