--- a/src/nwjsapp/index.html
+++ b/src/nwjsapp/index.html
@@ -54,7 +54,7 @@
       win.menu = menubar;
 
       require('node-jsx').install({extension: '.js'});
-      var app = require('./app.js');
+      var app = require('SuuntoDMEditorShared/app');
     </script>
   </body>
 </html>
