Updates image paths after restructuring

--- a/src/electronapp/index.html
+++ b/src/electronapp/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>Suunto DM Editor</title>
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
-    <link rel="stylesheet" href="node_modules/SuuntoDMEditorShared/styles/app.css">
+    <link rel="stylesheet" href="styles/app.css">
   </head>
   <body>
     <div id="main"></div>
     <script>
       require('node-jsx').install({extension: '.js'});
-      var app = require('SuuntoDMEditorShared/app');
+      var app = require('./app.js');
     </script>
   </body>
 </html>
