Clean auto updating

--- a/src/electronapp/index.html
+++ b/src/electronapp/index.html
@@ -12,13 +12,9 @@
       var app = require('./app.js');
     </script>
     <script>
+      var template = require('./desktop/MenuTemplate');
       var remote = require('remote');
       var Menu = remote.require('menu');
-
-      var template = [
-        { label: "Backup Database" },
-        { label: "Open Database Folder" }
-      ];
 
       var menu = Menu.buildFromTemplate(template);
       window.addEventListener('contextmenu', function (e) {
